--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Material+Icons"
     />
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
+    </script>
   </head>
   <body>
     <noscript>
